--- a/aboutme.html
+++ b/aboutme.html
@@ -10,14 +10,14 @@
 		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
 	</header>
 	<div class="col-md-2">
-		<div class="row"> <img src=""></div>
+		<div class="row"> <img src="dcdactivity5/Logotype.png"></div>
 	</div>
 	<div class="col-md-2">
 		<div class="row"> <h1> Emma Shenk </h1> </div>
 	</div>
 	<br>
 	<div class="col-md-2">
-		<div class="row"> <img src="Logotype.png"></div>
+		<div class="row"> <img src=""></div>
 	</div>
 	<div class="col-md-2">
 		<div class="row"> <p> </p> </div>
