--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
 	</header>
 	<div class="col-md-2">
-		<div class="row"> <img src="https://ekshenk.github.io/dcdactivity5/Logotype.png"></div>
+		<div class="row"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"></div>
 	</div>
 	<div class="col-md-2">
 		<div class="row"> <h1> Emma Shenk </h1> </div>
