--- a/aboutme.html
+++ b/aboutme.html
@@ -9,17 +9,17 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
 	</header>
-	<div class="col-md-2">
+	<div class="col-lg-2">
 		<div class="row"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"></div>
 	</div>
-	<div class="col-md-2">
+	<div class="col-lg-2">
 		<div class="row"> <h1> Emma Shenk </h1> </div>
 	</div>
 	<br>
-	<div class="col-md-2">
+	<div class="col-lg-2">
 		<div class="row"> <img src=""></div>
 	</div>
-	<div class="col-md-2">
+	<div class="col-lg-2">
 		<div class="row"> <p> </p> </div>
 	</div>
 	</html>
