--- a/aboutme.html
+++ b/aboutme.html
@@ -10,15 +10,12 @@
 		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
 	</header>
 	<body>
-		<div class="col-lg-6">
-			<div class="row"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"></div>
+		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
+		<div class="container">
+			<div class="col-lg-6"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG"> </div>
 			<div class="row"> <p> I am a senior Digital Culture and Design major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
 				I play the cello, so I guess I am interested in that. I love art, although I am a terrible artist(as you have probably seen in some of my stuff throughout this class).
 				I suck at being a student. I get really overhwelmed very easily and break under pressure, but also the pressure inspires me. It pushes me to do more and push myself harder, but I suck at it also. </p> </div>
-		</div>
-		<div class="col-lg-6">
-			<div class="row"> <h1> Emma Shenk <br> All About me </h1> </div>
-			<div class="row"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG"></div>
-		</div>
+		</div>		
 	</body>
 </html>
