--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,15 @@
 	<body>
 		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
 		<div class="container">
-			<div class="col-lg-6"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG"> </div>
+			<div class="col-lg-6"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG" alt="Self Portrait" width"200px" height:"600"> </div>
 			<div class="row"> <p> I am a senior Digital Culture and Design major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
 				I play the cello, so I guess I am interested in that. I love art, although I am a terrible artist(as you have probably seen in some of my stuff throughout this class).
 				I suck at being a student. I get really overhwelmed very easily and break under pressure, but also the pressure inspires me. It pushes me to do more and push myself harder, but I suck at it also. </p> </div>
-		</div>		
+		</div>
+		<br>
+		<div class="container">
+			<div class="col-lg-6">. </div>
+			<div class="col-lg-6"> </div> 
+		</div>
 	</body>
 </html>
