--- a/aboutme.html
+++ b/aboutme.html
@@ -11,16 +11,17 @@
 	</header>
 	<body>
 		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
-		<div class="container">
-			<div class="col-lg-6"> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG" alt="Self Portrait" width"200px" height:"600"> </div>
-			<div class="row"> <p> I am a senior Digital Culture and Design major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
+		<br>
+			<img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG" alt="Self Portrait">
+			<p> I am a senior <mark>Digital Culture and Design<mark> major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
 				I play the cello, so I guess I am interested in that. I love art, although I am a terrible artist(as you have probably seen in some of my stuff throughout this class).
 				I suck at being a student. I get really overhwelmed very easily and break under pressure, but also the pressure inspires me. It pushes me to do more and push myself harder, but I suck at it also. </p> </div>
-		</div>
 		<br>
-		<div class="container">
-			<div class="col-lg-6">. </div>
-			<div class="col-lg-6"> </div> 
-		</div>
+		<p>To be completely honest, and I believe in honesty, I have no idea what I want to do with the rest od my life. I'm currently waiting to hear back from a job that I'm not even sure that I want because I need something after graduation.
+			Over the years, I've jumped around aspirations. I wanted to be a doctor first, but someone told me that as a woman I wasn't smart enough and I listened. At one point I wanted to be a nurse, but blood freaks me out so that was a bad idea. 
+			Then I wanted to be an actor, then a teacher, then a writer, and then I was just clueless. That was when I found the DCD major was when I was just clueless. My hope is that I'll use the skills I've learned from DCD to do something I enjoy,
+			but I honestly have no idea what career I want. </p>
+		<br>
+		<p> I also have no idea what my aesthetic is. I like light colors, but I primarily work in darker colors. I like space and stars, but I love to draw flowers and leaves and trees. My aesthetic is a mix of so many things that it is almost chaos in itself. </p>
 	</body>
 </html>
