--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
 		<br>
 			<img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG" alt="Self Portrait">
-			<p> I am a senior <mark>Digital Culture and Design<mark> major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
+			<p> I am a senior <mark>Digital Culture and Design</mark> major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
 				I play the cello, so I guess I am interested in that. I love art, although I am a terrible artist(as you have probably seen in some of my stuff throughout this class).
 				I suck at being a student. I get really overhwelmed very easily and break under pressure, but also the pressure inspires me. It pushes me to do more and push myself harder, but I suck at it also. </p> </div>
 		<br>
