--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
+		<link rel="stylesheet" href="https://ekshenk.github.io/dcdactivity5/about.css">
 	</header>
 	<body>
 		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
