--- a/aboutme.html
+++ b/aboutme.html
@@ -13,10 +13,11 @@
 	<body>
 		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
 		<br>
-			<img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG" alt="Self Portrait">
 			<p> I am a senior <mark>Digital Culture and Design</mark> major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
 				I play the cello, so I guess I am interested in that. I love art, although I am a terrible artist(as you have probably seen in some of my stuff throughout this class).
 				I suck at being a student. I get really overhwelmed very easily and break under pressure, but also the pressure inspires me. It pushes me to do more and push myself harder, but I suck at it also. </p> </div>
+		<br>
+		<center><img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/IMG_0004.JPG" alt="Self Portrait"></center>
 		<br>
 		<p>To be completely honest, and I believe in honesty, I have no idea what I want to do with the rest od my life. I'm currently waiting to hear back from a job that I'm not even sure that I want because I need something after graduation.
 			Over the years, I've jumped around aspirations. I wanted to be a doctor first, but someone told me that as a woman I wasn't smart enough and I listened. At one point I wanted to be a nurse, but blood freaks me out so that was a bad idea. 
