--- a/final.html
+++ b/final.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
 		<title> DCD 302 Portfolio </title>
-		<link rel="stylesheet" href="styles/finalStyles.css">
+		<link rel="stylesheet" href="https://ekshenk.github.io/dcdactivity5/finalStyles.css">
 		<syle>
 	</header>
 	<body>
