--- a/final.html
+++ b/final.html
@@ -2,8 +2,12 @@
 <html>
 	<header>
 		<title> DCD 302 Portfolio </title>
-		<link rel="stylesheet" href="https://ekshenk.github.io/dcdactivity5/finalStyles.css">
-		<syle>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
+		<link rel="stylesheet" href="https://ekshenk.github.io/dcdactivity5/final.css">
 	</header>
 	<body>
 		<h1> Emma Shenk - DCD 302 Final Portfolio </h1>
@@ -11,6 +15,10 @@
 			<p>This is my Final Portfolio for DCD 302. I have compiled some of my favorite pieces from the class as well as some pieces I'v worked on outside of this class. </p>
 			<p>I hope you enjoy my pieces! </p>
 		</div>
-		
+		<div class = "work">
+			<h2> My collective work </h2>
+			<h3> Photos</h3>
+			
+		</div>
 	</body>
 </html>
