--- a/final.html
+++ b/final.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
-		<link rel="stylesheet" href="https://ekshenk.github.io/dcdactivity5/final.css">
+		<link rel="stylesheet" href="finalStyles.css">
 	</header>
 	<body>
 		<h1> Emma Shenk - DCD 302 Final Portfolio </h1>
