--- a/final.html
+++ b/final.html
@@ -17,8 +17,11 @@
 		</div>
 		<div class = "work">
 			<h2> My collective work </h2>
-			<h3> Photos</h3>
-			
+			<div class = "photo">
+				<h3> Photos</h3>
+				<h4>Self Portrait</h4>
+				<img src = "IMG_0004.JPG" height="50%" width = "50%" alt = "A minimalistic Self Portrait">
+			</div>
 		</div>
 	</body>
 </html>
