--- a/final.html
+++ b/final.html
@@ -20,7 +20,7 @@
 			<div class = "photo">
 				<h3> Photos</h3>
 				<h4>Self Portrait</h4>
-				<img src = "IMG_0004.JPG" height="100%" width = "50%" alt = "A minimalistic Self Portrait">
+				<img src = "IMG_0004.JPG" height="500px" width = "250px" alt = "A minimalistic Self Portrait">
 			</div>
 		</div>
 	</body>
