--- a/final.html
+++ b/final.html
@@ -18,9 +18,10 @@
 		<div class = "work">
 			<h2> My collective work </h2>
 			<div class = "photo">
-				<h2> Photos</h2>
+				<h2> Photos and Designs</h2>
 				<h3>Self Portrait</h3>
 				<img src = "IMG_0004.JPG" height="100%" width = "50%" alt = "A minimalistic Self Portrait">
+				
 			</div>
 		</div>
 	</body>
