--- a/final.html
+++ b/final.html
@@ -6,11 +6,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://use.typekit.net/eds0gdj.css">
 		<link rel="stylesheet" href="finalStyles.css">
 	</header>
 	<body>
 		<h1> Emma Shenk - DCD 302 Final Portfolio </h1>
+		<img src = "Logotype.png" alt = "My LogoType">
 		<div class = "summary">
 			<p>This is my Final Portfolio for DCD 302. I have compiled some of my favorite pieces from the class as well as some pieces I'v worked on outside of this class. </p>
 			<p>I hope you enjoy my pieces! </p>
