--- a/final.html
+++ b/final.html
@@ -12,7 +12,8 @@
 		<h1> Emma Shenk - DCD 302 Final Portfolio </h1>
 		<center><img src = "Logotype.png" alt = "My LogoType"></center>
 		<div class = "nav">
-			<a href = "https://ekshenk.github.io/dcdactivity5/aboutme.html">  &nbsp; &nbsp; About Me  &nbsp; &nbsp;</a>
+			<a href = "https://ekshenk.github.io/dcdactivity5/aboutme.html">  &nbsp; &nbsp; About Me  &nbsp; &nbsp;</a> 
+			<a href = "https://ekshenk.github.io/dcdactivity5/final"> &nbsp; &nbsp; Final Portfolio &nbsp; &nbsp; </a>
 		<div class = "summary">
 			<p>This is my Final Portfolio for DCD 302. I have compiled some of my favorite pieces from the class as well as some pieces I'v worked on outside of this class. </p>
 			<p>I hope you enjoy my pieces! </p>
