--- a/final.html
+++ b/final.html
@@ -14,6 +14,7 @@
 		<div class = "nav">
 			<a href = "https://ekshenk.github.io/dcdactivity5/aboutme.html">  &nbsp; &nbsp; About Me  &nbsp; &nbsp;</a> 
 			<a href = "https://ekshenk.github.io/dcdactivity5/final"> &nbsp; &nbsp; Final Portfolio &nbsp; &nbsp; </a>
+		</div>
 		<div class = "summary">
 			<p>This is my Final Portfolio for DCD 302. I have compiled some of my favorite pieces from the class as well as some pieces I'v worked on outside of this class. </p>
 			<p>I hope you enjoy my pieces! </p>
@@ -24,7 +25,10 @@
 				<h2> Photos and Designs</h2>
 				<h3>Self Portrait</h3>
 				<img src = "IMG_0004.JPG" height="100%" width = "50%" alt = "A minimalistic Self Portrait">
-				
+				<h3> There is so much out there for me </h3>
+				<img src = "star.png" alt="A starry SVG to be printed on my cricut">
+				<h3> Every Artist </h3>
+				<img src = "art.png alt = "A queote about what it means to become an artist">
 			</div>
 		</div>
 	</body>
