--- a/final.html
+++ b/final.html
@@ -28,7 +28,11 @@
 				<h3> There is so much out there for me </h3>
 				<img src = "star.png" alt="A starry SVG to be printed on my cricut">
 				<h3> Every Artist </h3>
-				<img src = "art.png alt = "A queote about what it means to become an artist">
+				<img src = "art.png" alt = "A quote about what it means to become an artist">
+				<h3> Minimalist Gator </h3>
+				<img src = "dog.png" alt = "A minimalistic portrait of my dog.">
+				<h3> Love Wins </h3> 
+				<img src="love.gif" alt = "An animated gif."> 
 			</div>
 		</div>
 	</body>
