--- a/final.html
+++ b/final.html
@@ -32,7 +32,7 @@
 				<h3> Minimalist Gator </h3>
 				<img src = "dog.png" alt = "A minimalistic portrait of my dog.">
 				<h3> Love Wins </h3> 
-				<img src="love.GIF" alt = "An animated gif."> 
+				<img src="love.GIF" alt = "An animated gif." height = "50%" width="50%"> 
 			</div>
 		</div>
 	</body>
