--- a/final.html
+++ b/final.html
@@ -14,6 +14,7 @@
 		<div class = "nav">
 			<a href = "https://ekshenk.github.io/dcdactivity5/aboutme.html">  &nbsp; &nbsp; About Me  &nbsp; &nbsp;</a> 
 			<a href = "https://ekshenk.github.io/dcdactivity5/final"> &nbsp; &nbsp; Final Portfolio &nbsp; &nbsp; </a>
+			<hr>
 		</div>
 		<div class = "summary">
 			<p>This is my Final Portfolio for DCD 302. I have compiled some of my favorite pieces from the class as well as some pieces I'v worked on outside of this class. </p>
@@ -33,7 +34,8 @@
 				<img src = "dog.png" alt = "A minimalistic portrait of my dog.">
 				<h3> Love Wins </h3> 
 				<img src="love.GIF" alt = "An animated gif." height = "50%" width="50%"> 
-				
+				<h3> Steven Universe Minimalist Poster </h3>
+				<img src = "Screen Shot 2021-04-11 at 9.55.02 PM.png" alt="A minimalist poster for the show <q>Steven Universe </q>">
 			</div>
 		</div>
 	</body>
