--- a/final.html
+++ b/final.html
@@ -24,8 +24,7 @@
 			<h2> My collective work </h2>
 			<div class = "photo">
 				<h2> Photos and Designs</h2>
-				<h3>Self Portrait</h3>
-				<img src = "IMG_0004.JPG" height="100%" width = "50%" alt = "A minimalistic Self Portrait">
+				
 				<h3> There is so much out there for me </h3>
 				<img src = "star.png" alt="A starry SVG to be printed on my cricut">
 				<h3> Every Artist </h3>
@@ -33,9 +32,22 @@
 				<h3> Minimalist Gator </h3>
 				<img src = "dog.png" alt = "A minimalistic portrait of my dog.">
 				<h3> Love Wins </h3> 
-				<img src="love.GIF" alt = "An animated gif." height = "50%" width="50%"> 
-				<h3> Steven Universe Minimalist Poster </h3>
-				<img src = "Screen Shot 2021-04-11 at 9.55.02 PM.png" alt="A minimalist poster for the show <q>Steven Universe </q>">
+				<img src="love.GIF" alt = "An animated gif." height = "50%" width="50%"> 				
+				<h3> Gator Outside </h3>
+				<div class="container">
+  					<div class="row">
+  						<div class="col-sm">
+							<h3>Self Portrait</h3>
+							<br>
+							<img src = "IMG_0004.JPG" height="100%" width = "50%" alt = "A minimalistic Self Portrait">
+      							</div>
+    						<div class="col-sm">
+      							<h3> Steven Universe Minimalist Poster </h3>
+							<br>
+							<img src = "Screen Shot 2021-04-11 at 9.55.02 PM.png" alt="A minimalist poster for the show <q>Steven Universe </q>" height = "200%" width = "200%">
+  						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
