--- a/final.html
+++ b/final.html
@@ -44,7 +44,7 @@
     						<div class="col-sm">
       							<h3> Steven Universe Minimalist Poster </h3>
 							<br>
-							<img src = "Screen Shot 2021-04-11 at 9.55.02 PM.png" alt="A minimalist poster for the show <q>Steven Universe </q>" height = "200%" width = "200%">
+							<img src = "Screen Shot 2021-04-11 at 9.55.02 PM.png" alt="A minimalist poster for the show <q>Steven Universe </q>">
   						</div>
 					</div>
 				</div>
