--- a/final.html
+++ b/final.html
@@ -36,12 +36,12 @@
 				<h3> Gator Outside </h3>
 				<div class="container">
   					<div class="row">
-  						<div class="col-sm">
+  						<div class="col-sm-6">
 							<h3>Self Portrait</h3>
 							<br>
 							<img src = "IMG_0004.JPG" height="100%" width = "50%" alt = "A minimalistic Self Portrait">
       							</div>
-    						<div class="col-sm">
+    						<div class="col-sm-6">
       							<h3> Steven Universe Minimalist Poster </h3>
 							<br>
 							<img src = "Screen Shot 2021-04-11 at 9.55.02 PM.png" alt="A minimalist poster for the show <q>Steven Universe </q>">
