--- a/final.html
+++ b/final.html
@@ -36,7 +36,7 @@
 				<h3> Gator Outside </h3>
 				<div class="container">
   					<div class="row">
-  						<div class="col-sm-6">
+  						<div class="col-sm-6 img-fluid">
 							<h3>Self Portrait</h3>
 							<br>
 							<img src = "IMG_0004.JPG" alt = "A minimalistic Self Portrait">
