--- a/final.html
+++ b/final.html
@@ -39,7 +39,7 @@
   						<div class="col-sm-6 img-fluid">
 							<h3>Self Portrait</h3>
 							<br>
-							<img src = "IMG_0004.JPG" alt = "A minimalistic Self Portrait">
+							<img src = "IMG_0004.JPG" alt = "A minimalistic Self Portrait" height = "500 px" width = "200px">
       							</div>
     						<div class="col-sm-6">
       							<h3> Steven Universe Minimalist Poster </h3>
