--- a/final.html
+++ b/final.html
@@ -49,12 +49,12 @@
 						<div class="col-sm-6">
 							<h3> There is so much out there for me </h3>
 							<br>
-							<img src = "star.png" alt="A starry SVG to be printed on my cricut">     
+							<img src = "star.png" alt="A starry SVG to be printed on my cricut" height="300px" width="300px">     
 						</div>
 						<div class="col-sm-6">
 							<h3> Every Artist </h3>
 							<br>
-							<img src = "art.png" alt = "A quote about what it means to become an artist">
+							<img src = "art.png" alt = "A quote about what it means to become an artist" height= "300px" width = "300px">
 						</div>
 					</div>
 				</div>
