--- a/final.html
+++ b/final.html
@@ -58,7 +58,7 @@
 							<div class = "col-sm-6">
 								<h3> Love Wins </h3> 
 								<br>
-								<img src="love.GIF" alt = "An animated gif." height = "50%" width="50%"> 				
+								<img src="love.GIF" alt = "An animated gif." width="50%"> 				
 							</div>
 						</div>
 					</div>
