--- a/final.html
+++ b/final.html
@@ -98,9 +98,9 @@
 															      to focus on the section about the alcoholic who drinks to forget.">
 							</div>
 							<div class = "col-sm-6">
-							
+								<h3> Gator in bed </h3>
 								<br>
-								
+								<img src = "Four.jpg" alt = "A cute photo of my dog chilling in my bed." width = "50%">
 							</div>
 						</div>
 					</div>
