--- a/final.html
+++ b/final.html
@@ -29,7 +29,7 @@
   							<div class="col-sm-6 img-fluid">
 								<h3>Self Portrait</h3>
 								<br>
-								<img src = "IMG_0004.JPG" alt = "A minimalistic Self Portrait" height = "500 px" width = "350px">
+								<img src = "IMG_0004.JPG" alt = "A minimalistic Self Portrait" width = "400px">
       							</div>
     							<div class="col-sm-6">
       								<h3> Steven Universe Minimalist Poster </h3>
@@ -41,12 +41,12 @@
 							<div class="col-sm-6">
 								<h3> There is so much out there for me </h3>
 								<br>
-								<img src = "star.png" alt="A starry SVG to be printed on my cricut" height="300px" width="300px">     
+								<img src = "star.png" alt="A starry SVG to be printed on my cricut" width = "400px">     
 							</div>
 							<div class="col-sm-6">
 								<h3> Every Artist </h3>
 								<br>
-								<img src = "art.png" alt = "A quote about what it means to become an artist" height= "300px" width = "300px">
+								<img src = "art.png" alt = "A quote about what it means to become an artist" width = "400px">
 							</div>
 						</div>
 						<div class="row" >
@@ -58,7 +58,7 @@
 							<div class = "col-sm-6">
 								<h3> Love Wins </h3> 
 								<br>
-								<img src="love.GIF" alt = "An animated gif." width="50%"> 				
+								<img src="love.GIF" alt = "An animated gif." width = "400px"> 				
 							</div>
 						</div>
 					</div>
@@ -70,37 +70,37 @@
   							<div class="col-sm-6 img-fluid">
 								<h3> Outside </h3>
 								<br>
-								<img src = "Five.jpg" width = "50%" alt = "A photo of the outside of my apartment. This is where I took many of my classes this semester" >
+								<img src = "Five.jpg" width = "400px" alt = "A photo of the outside of my apartment. This is where I took many of my classes this semester" >
 							</div>
     							<div class="col-sm-6">
 								<h3> Counting Rabbits </h3>
 								<br>
-								<img src - "Three.jpg" width = "50%" alt = "A photo of my dog cuddling with his stuffed rabbit. He's a big sweetie.">
+								<img src - "Three.jpg" width = "400px" alt = "A photo of my dog cuddling with his stuffed rabbit. He's a big sweetie.">
 							</div>
 						</div>
 						<div class = "row">
 							<div class="col-sm-6">
 								<h3> Gator inside </h3>
 								<br>
-								<img src = "Inside.JPG" alt = "A super cute photo of my dog inside my house.">
+								<img src = "Inside.JPG" width = "400px" alt = "A super cute photo of my dog inside my house.">
 							</div>
 							<div class="col-sm-6">
 								<h3> Gator Outside </h3>
 								<br>
-								<img src = "Outside.JPG" alt = "A super cute photo of my dog outside">
+								<img src = "Outside.JPG" width = "400px" alt = "A super cute photo of my dog outside">
 							</div>
 						</div>
 						<div class="row" >
 							<div class = "col-sm-6">
 								<h3> The Little Prince </h3>
 								<br>
-								<img src = "Screen Shot 2021-05-01 at 10.52.43 PM.png" alt = "My bookstagram of <q> The Little Prince </q> in which I chose 
+								<img src = "Screen Shot 2021-05-01 at 10.52.43 PM.png" width = "400px" alt = "My bookstagram of <q> The Little Prince </q> in which I chose 
 															      to focus on the section about the alcoholic who drinks to forget.">
 							</div>
 							<div class = "col-sm-6">
 								<h3> Gator in bed </h3>
 								<br>
-								<img src = "Four.jpg" alt = "A cute photo of my dog chilling in my bed." width = "50%">
+								<img src = "Four.jpg" alt = "A cute photo of my dog chilling in my bed." width = "400px" >
 							</div>
 						</div>
 					</div>
