--- a/final.html
+++ b/final.html
@@ -75,7 +75,7 @@
     							<div class="col-sm-6">
 								<h3> Counting Rabbits </h3>
 								<br>
-								<img src - "Three.jpg" width = "400px" alt = "A photo of my dog cuddling with his stuffed rabbit. He's a big sweetie.">
+								<img src = "Three.jpg" width = "400px" alt = "A photo of my dog cuddling with his stuffed rabbit. He's a big sweetie.">
 							</div>
 						</div>
 						<div class = "row">
