--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 <html>
 	<header>
 		<title>Emma Shenk | About Me</title>
+		<link rel="stylesheet" href="finalStyles.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +13,11 @@
 	</header>
 	<body>
 		<center> <img src="https://raw.githubusercontent.com/ekshenk/dcdactivity5/main/Logotype.png"> </center>
-		<br>
-			<p> I am a senior <mark>Digital Culture and Design</mark> major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
+		<div class = "nav">
+			<a href = "https://ekshenk.github.io/dcdactivity5/aboutme.html">  &nbsp; &nbsp; About Me  &nbsp; &nbsp;</a> 
+			<a href = "https://ekshenk.github.io/dcdactivity5/final"> &nbsp; &nbsp; Final Portfolio &nbsp; &nbsp; </a>
+			<hr>
+		</div>			<p> I am a senior <mark>Digital Culture and Design</mark> major at Coastal currently. I'm super ready to graduate and just hoping to not have to come back.
 				I play the cello, so I guess I am interested in that. I love art, although I am a terrible artist(as you have probably seen in some of my stuff throughout this class).
 				I suck at being a student. I get really overhwelmed very easily and break under pressure, but also the pressure inspires me. It pushes me to do more and push myself harder, but I suck at it also. </p> </div>
 		<br>
