--- a/final.html
+++ b/final.html
@@ -125,6 +125,11 @@
 								<h3>  </h3>
 								<br>
 								
+								<video width="320" height="240" controls>
+ 									<source src="trim.E24ABE7E-E2A0-480B-9D9C-8BCD058A87D9.MOV" type="video/mp4">
+  									<source src="movie.ogg" type="video/ogg">
+									Your browser does not support the video tag.
+								</video>
 							</div>
 							<div class="col-sm-6">
 								<h3>  </h3>
