--- a/final.html
+++ b/final.html
@@ -125,8 +125,8 @@
 								<h3>  </h3>
 								<br>
 								
-								<video width="320" height="240" controls>
- 									<source src="trim.E24ABE7E-E2A0-480B-9D9C-8BCD058A87D9.MOV" type="video/mp4">
+								<video width="400" height="300" controls>
+ 									<source src="trim.E24ABE7E-E2A0-480B-9D9C-8BCD058A87D9.MOV" type="video/mp4" alt = "A stick figure video I made of a stick man walking across the screen.">
   									<source src="movie.ogg" type="video/ogg">
 									Your browser does not support the video tag.
 								</video>
