--- a/final.html
+++ b/final.html
@@ -122,9 +122,8 @@
 						</div>
 						<div class = "row">
 							<div class="col-sm-6">
-								<h3>  </h3>
+								<h3> Learning Curve </h3>
 								<br>
-								
 								<video width="400" height="300" controls>
  									<source src="trim.E24ABE7E-E2A0-480B-9D9C-8BCD058A87D9.MOV" type="video/mp4" alt = "A stick figure video I made of a stick man walking across the screen.">
   									<source src="movie.ogg" type="video/ogg">
@@ -132,9 +131,13 @@
 								</video>
 							</div>
 							<div class="col-sm-6">
-								<h3>  </h3>
+								<h3> A Playful Day </h3>
 								<br>
-								
+								<video width="400" height="300" controls>
+ 									<source src="slow.mov" type="video/mp4" alt = "A cute slow motion video of my dog running towards me at the park.">
+  									<source src="movie.ogg" type="video/ogg">
+									Your browser does not support the video tag.
+								</video>
 							</div>
 						</div>
 					</div>
