--- a/final.html
+++ b/final.html
@@ -112,12 +112,12 @@
   							<div class="col-sm-6">
 								<h3> Love Wins </h3> 
 								<br>
-								<img src="love.GIF" alt = "An animated gif." width = "400px"> 
+								<img src="love.GIF" alt = "An animated gif with a powerful message about love." width = "400px"> 
 							</div>
     							<div class="col-sm-6">
-								<h3>  </h3>
+								<h3> Whimsical Love </h3> 
 								<br>
-								
+								<img src="Untitled_Artwork.gif" alt = "An animated gif of a ribbon-like heart coming onto the screen." width = "400px"> 
 							</div>
 						</div>
 						<div class = "row">
@@ -141,6 +141,9 @@
 							</div>
 						</div>
 					</div>
+			</div>
+			<div class = "statement">
+				
 			</div>
 		</div>
 	</body>
