--- a/final.html
+++ b/final.html
@@ -24,6 +24,9 @@
 			<h2> My collective work </h2>
 			<div class = "desgins">
 				<h2> Designs</h2>
+				<p> Throughout this section are my vector designs. It is filled with my minimalistic vector designs, a minimalistic poster, and some other designs I made primarily to use on my cricut for stickers. 
+					The colors are mostly dull except for a splash of color here and there, whcih is a large part of my aesthetic. I put a lot of focus on dark colors and use pops of brighter colors to emphasize
+					those darker colors. This is a large part of my design aesthetic. </p>
 					<div class="container">
   						<div class="row">
   							<div class="col-sm-6">
@@ -65,6 +68,10 @@
 			</div>
 			<div class = "photos">
 				<h2> Photos </h2>
+					<p> The photos that I have chosen to represent my photography portfolio are mostly my dog. My dog is most of my personality. He defines most of my life. The other photos I chose are my life
+						 when I'm not focused on him. When I'm not with him (and sometimes when I am) I spend my time outside enjoying the sun or reading quietly by myself. Thats why I chose these phots to
+						 represent my aesthetic. The colors in most of these photos are very bright with darker aspects more as shadow instead of the primary focus like with my design, which is a common
+						trend among photography for me. </p>
 					<div class="container">
   						<div class="row">
   							<div class="col-sm-6">
