--- a/final.html
+++ b/final.html
@@ -114,6 +114,8 @@
 			</div>
 			<div class = "animation">
 				<h2> Animation and Videos </h2>
+				<p> In this section are gifs or videos that I animated and a slow motion video of my dog. I chose the video of my dog because, as I have said previously, is essentially my whole personality. 
+					The animations I created were all very bright and quick. 
 					<div class="container">
   						<div class="row">
   							<div class="col-sm-6">
