--- a/final.html
+++ b/final.html
@@ -115,7 +115,9 @@
 			<div class = "animation">
 				<h2> Animation and Videos </h2>
 				<p> In this section are gifs or videos that I animated and a slow motion video of my dog. I chose the video of my dog because, as I have said previously, is essentially my whole personality. 
-					The animations I created were all very bright and quick. 
+					The animations I created were all very bright and quick. These are all very bright videos with colors that work well with one another and contrast whatever darkness is hightlighted in my animations and videos. 
+					These animations fit my aesthetic well because they are ideas of who I am. For my animations, I drew out one image at a time and went screen by screen to add the images together in a way that made them look like they were moving.
+					I chose to do it simlarly to how we did the flipbook earlier in the semester. 
 					<div class="container">
   						<div class="row">
   							<div class="col-sm-6">
