--- a/final.html
+++ b/final.html
@@ -154,7 +154,10 @@
 					</div>
 			</div>
 			<div class = "statement">
-				
+				<h2>Influences and Aspirations </h2>
+				<p> Many of my designs, photos, animations, and videos come from my day to day life. From all of the images of my dog to the animated gifs about love, 
+					each of these items that I have currated define who I am. Each item is an integral part of my life and personality. I chose to use my work to show my love 
+					for my dog. I used my work to show my pride for my university. I used my work to show who I am on an intimate and deep way. </p>
 			</div>
 		</div>
 	</body>
