--- a/final.html
+++ b/final.html
@@ -157,7 +157,9 @@
 				<h2>Influences and Aspirations </h2>
 				<p> Many of my designs, photos, animations, and videos come from my day to day life. From all of the images of my dog to the animated gifs about love, 
 					each of these items that I have currated define who I am. Each item is an integral part of my life and personality. I chose to use my work to show my love 
-					for my dog. I used my work to show my pride for my university. I used my work to show who I am on an intimate and deep way. </p>
+					for my dog. I used my work to show my pride for my university. I used my work to show who I am on an intimate and deep way. I am proud of the works that I have selected
+					and my choice to use my life and the things within it as my inspiration. </p>
+				<br><br><br>
 			</div>
 		</div>
 	</body>
